update prod endpoints

--- a/.env.production
+++ b/.env.production
@@ -21,21 +21,22 @@ FACILITYLIST_API="https://locationapi.surgicalsafety.com/api/facility/list"
 FACILITYDEPARTMENT_API="https://locationapi.surgicalsafety.com/api/department/facility"
 EMMACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
-EMMREQUEST_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/request"
-EMMREPORT_API="https://insightsapi.surgicalsafety.com/api/enhancedmm"
-EMMPUBLISH_API="https://insightsapi.surgicalsafety.com/api/enhancedMM/publish"
+EMMREQUEST_API="https://api.insights.surgicalsafety.com/api/emm/v1/request"
+REQUESTEMM_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/request"
+EMMREPORT_API="https://api.insights.surgicalsafety.com/api/emm/v1"
+EMMPUBLISH_API="https://api.insights.surgicalsafety.com/api/emm/v1/publish"
 ONBOARD_API="https://insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://insightsapi.surgicalsafety.com/api/media/"
-PRESENTER_API="https://insightsapi.surgicalsafety.com/api/media/presenter/"
+MEDIA_API="https://api.insights.surgicalsafety.com/api/emm/v1/media"
+PRESENTER_API="https://api.insights.surgicalsafety.com/api/emm/v1/presenter"
 USERSEARCH_API="https://insightsapi.surgicalsafety.com/api/users"
 DASHBOARDTILE_API="https://insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EFFICIENCY_ACCESS_API="https://insightsapi.surgicalsafety.com/api/efficiency/access"
-EFFICIENCY_API="https://insights-api.surgicalsafety.com/api/efficiency/v1"
-EFFICIENCYTILE_API="https://insights-api.surgicalsafety.com/api/efficiency/v1/tile"
+EFFICIENCY_API="https://api.insights.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://api.insights.surgicalsafety.com/api/efficiency/v1/tile"
 SSC_ACCESS_API="https://insightsapi.surgicalsafety.com/api/ssc/access"
-SSC_API="https://insights-api.surgicalsafety.com/api/ssc/v1"
+SSC_API="https://api.insights.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
