--- a/.env.development
+++ b/.env.development
@@ -44,3 +44,4 @@ SSCTILE_API="https://localhost:5003/api/ssc/tile"
 SPECIALTY_API="https://localhost:5102/api/list/specialty"
 PROCEDURE_API="https://localhost:5102/api/list/procedure"
 COMPLICATION_API="https://localhost:5102/api/list/complication"
+CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
