--- a/.env.production
+++ b/.env.production
@@ -43,3 +43,4 @@ SSCTILE_API="https://insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
 PROCEDURE_API="https://lookupsapi.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
+CASE_DISCOVERY_API="https://api.insights.surgicalsafety.com/api/case_discovery/v1/"
