--- a/.env.test
+++ b/.env.test
@@ -44,3 +44,4 @@ SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 PROCEDURE_API="https://test-lookup.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
+CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
