--- a/.env.production
+++ b/.env.production
@@ -44,3 +44,5 @@ SPECIALTY_API="https://lookupsapi.surgicalsafety.com/api/list/specialty"
 PROCEDURE_API="https://lookupsapi.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://lookupsapi.surgicalsafety.com/api/list/complication"
 CASE_DISCOVERY_API="https://api.insights.surgicalsafety.com/api/case_discovery/v1/"
+LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
+LOGGER_APP_ID="81d1afd1-c073-4805-a6d8-97f8696a7586"
