--- a/.env.test
+++ b/.env.test
@@ -45,3 +45,5 @@ SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 PROCEDURE_API="https://test-lookup.surgicalsafety.com/api/list/procedure"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
 CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
+LOGGER_API="https://api.insights-staging.surgicalsafety.com/api/logging"
+LOGGER_APP_ID="81d1afd1-c073-4805-a6d8-97f8696a7586"
