--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react-select": "3.0.8",
     "react-table": "6.9.2",
     "react-thunk": "1.0.0",
+    "react-transition-group": "^4.4.1",
     "recharts": "1.5.0",
     "redux": "3.7.2",
     "redux-immutable": "4.0.0",
