--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "react-loading-overlay": "1.0.1",
     "react-minimal-pie-chart": "6.0.1",
     "react-moment": "0.9.7",
-    "react-redux": "5.0.7",
+    "react-redux": "7.1.1",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
     "react-scripts": "2.1.8",
@@ -124,6 +124,7 @@
     "eslint-plugin-import": "2.12.0",
     "eslint-plugin-jsx-a11y": "6.0.3",
     "eslint-plugin-react": "7.9.1",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-redux-saga": "0.9.0",
     "eventsource-polyfill": "0.9.6",
     "exports-loader": "0.7.0",
