--- a/.env.test
+++ b/.env.test
@@ -7,7 +7,7 @@ TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 ALLOW_PLUS_EMAILS=true
-USER_API="https://test-insightsapi.surgicalsafety.com/api/Profile"
+USER_API="https://utils.surgicalsafety.com/api/users/v1/profile"
 USERMANAGEMENT_API="https://test-users.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://test-users.surgicalsafety.com/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://test-users.surgicalsafety.com/api/userroles/multi"
