--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "react-c3js": "^0.1.20",
     "react-dates": "^21.8.0",
     "react-dom": "^16.8.4",
+    "react-flickity-component": "3.2.0",
     "react-helmet": "5.2.1",
     "react-idle-timer": "4.2.12",
     "react-loadable": "5.4.0",
