Update profile call

--- a/.env.production
+++ b/.env.production
@@ -6,7 +6,7 @@ B2C_ACCOUNT="sstapps.b2clogin.com"
 TENANT="sstapps.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
-USER_API="https://insightsapi.surgicalsafety.com/api/Profile"
+USER_API="https://api.insights.surgicalsafety.com/api/users/v1/profile"
 USERMANAGEMENT_API="https://usersapi.surgicalsafety.com/api/users/"
 USERMANAGEMENTUSERROLES_API="https://usersapi.surgicalsafety.com/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://usersapi.surgicalsafety.com/api/userroles/multi"
