--- a/package.json
+++ b/package.json
@@ -73,13 +73,13 @@
     "react-c3js": "^0.1.20",
     "react-dates": "^21.8.0",
     "react-dom": "^16.8.4",
-    "react-flickity-component": "3.2.0",
     "react-helmet": "5.2.1",
     "react-idle-timer": "4.2.12",
     "react-loadable": "5.4.0",
     "react-loading-overlay": "1.0.1",
     "react-minimal-pie-chart": "6.0.1",
     "react-moment": "0.9.7",
+    "react-multi-carousel": "^2.6.3",
     "react-redux": "7.1.1",
     "react-router-dom": "4.3.1",
     "react-router-redux": "5.0.0-alpha.6",
