--- a/.env.development
+++ b/.env.development
@@ -6,8 +6,15 @@ B2C_ACCOUNT="sstappstest.b2clogin.com"
 TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
+
+
+AUTH_CALLBACK=http://localhost:3000
+AUTH_LOGIN=https://accounts.surgicalsafety.com/
+AUTH_CLIENT_ID=33a6a970-ddb0-48e5-a8fe-68c2212ddc94
+AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
+
 ALLOW_PLUS_EMAILS=true
-USER_API="https://utils.surgicalsafety.com/api/users/v1/profile"
+USER_API="http://127.0.0.1:8006/api/users/v1/profile"
 USERMANAGEMENT_API="https://localhost:5001/api/users/"
 USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
 USERMANAGEMENTUSERROLES_MULTI_API="https://localhost:5001/api/userroles/multi"
