Update User Management to call new User API

--- a/.env.development
+++ b/.env.development
@@ -7,23 +7,14 @@ TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 
-
 AUTH_CALLBACK=http://localhost:3000
 AUTH_LOGIN=https://accounts.surgicalsafety.com/
 AUTH_CLIENT_ID=33a6a970-ddb0-48e5-a8fe-68c2212ddc94
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="http://127.0.0.1:8006/api/users/v1/profile"
-USERMANAGEMENT_API="https://localhost:5001/api/users/"
-USERMANAGEMENTUSERROLES_API="https://localhost:5001/api/userroles/"
-USERMANAGEMENTUSERROLES_MULTI_API="https://localhost:5001/api/userroles/multi"
-USERMANAGEMENTRESET_API="https://localhost:5001/api/users/resetpassword"
-USERMANAGEMENTCHANGEMFA_API="https://localhost:5001/api/users/changemfa"
-USERMANAGEMENTCHANGEPASSWORD_API="https://localhost:5001/api/users/changepassword"
-USERMANAGMENTACTIVATE_API="https://localhost:5001/api/users/activate"
-USERMANAGEMENTACCESS_API="https://localhost:5001/api/users/access"
-USERMANAGEMENTROLES_API="https://localhost:5001/api/roles"
+USER_API="http://127.0.0.1:8006/api/users/v1/"
+
 LOCATIONROOM_API="https://localhost:5002/api/room/facility"
 FACILITYLIST_API="https://localhost:5002/api/facility/list"
 EMMACCESS_API="https://localhost:5003/api/EnhancedMM/access"
