--- a/.env.production
+++ b/.env.production
@@ -6,16 +6,14 @@ B2C_ACCOUNT="sstapps.b2clogin.com"
 TENANT="sstapps.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
+
+AUTH_CALLBACK=https://insights.surgicalsafety.com
+AUTH_LOGIN=https://accounts.surgicalsafety.com/
+AUTH_CLIENT_ID=f01a69d2-569b-4cba-aba7-832d033ae19f
+AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
+
 USER_API="https://api.insights.surgicalsafety.com/api/users/v1/profile"
-USERMANAGEMENT_API="https://usersapi.surgicalsafety.com/api/users/"
-USERMANAGEMENTUSERROLES_API="https://usersapi.surgicalsafety.com/api/userroles/"
-USERMANAGEMENTUSERROLES_MULTI_API="https://usersapi.surgicalsafety.com/api/userroles/multi"
-USERMANAGEMENTRESET_API="https://usersapi.surgicalsafety.com/api/users/resetpassword"
-USERMANAGEMENTCHANGEMFA_API="https://usersapi.surgicalsafety.com/api/users/changemfa"
-USERMANAGEMENTCHANGEPASSWORD_API="https://usersapi.surgicalsafety.com/api/users/changepassword"
-USERMANAGMENTACTIVATE_API="https://usersapi.surgicalsafety.com/api/users/activate"
-USERMANAGEMENTACCESS_API="https://usersapi.surgicalsafety.com/api/users/access"
-USERMANAGEMENTROLES_API="https://usersapi.surgicalsafety.com/api/roles"
+
 LOCATIONROOM_API="https://locationapi.surgicalsafety.com/api/room/facility"
 FACILITYLIST_API="https://locationapi.surgicalsafety.com/api/facility/list"
 EMMACCESS_API="https://insightsapi.surgicalsafety.com/api/EnhancedMM/access"
