updated callback url for test

--- a/.env.test
+++ b/.env.test
@@ -7,7 +7,7 @@ TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 
-AUTH_CALLBACK=https://test-insights.surgicalsafety.com
+AUTH_CALLBACK=https://insights-test.surgicalsafety.com
 AUTH_LOGIN=https://accounts.surgicalsafety.com/
 AUTH_CLIENT_ID=30c767a6-2dbc-439e-b068-e80ca206c740
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
