--- a/.env.test
+++ b/.env.test
@@ -13,7 +13,7 @@ AUTH_CLIENT_ID=33a6a970-ddb0-48e5-a8fe-68c2212ddc94
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="https://utils.surgicalsafety.com/api/users/v1/profile"
+USER_API="https://utils.surgicalsafety.com/api/users/v1/"
 
 EMMREQUEST_API="https://utils.surgicalsafety.com/api/emm/v1/request"
 EMMREPORT_API="https://utils.surgicalsafety.com/api/emm/v1"
