--- a/.env.staging
+++ b/.env.staging
@@ -7,37 +7,37 @@ TENANT="sstappstest.onmicrosoft.com"
 CHANGE_PASSWORD_POLICY="B2C_1A_default_password_change"
 CHANGE_PHONENUMBER_POLICY="B2C_1A_Edit_MFA"
 
-AUTH_CALLBACK=https://test-insights.surgicalsafety.com
+AUTH_CALLBACK=https://insights-staging.surgicalsafety.com
 AUTH_LOGIN=https://accounts.surgicalsafety.com/
 AUTH_CLIENT_ID=30c767a6-2dbc-439e-b068-e80ca206c740
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="https://utils.surgicalsafety.com/api/users/v1/profile"
+USER_API="https://api.insights-staging.surgicalsafety.com/api/users/v1/profile"
 
 LOCATIONROOM_API="https://test-location.surgicalsafety.com/api/room/facility"
 FACILITYLIST_API="https://test-location.surgicalsafety.com/api/facility/list"
 EMMACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access"
 EMMREQUESTACCESS_API="https://test-insightsapi.surgicalsafety.com/api/EnhancedMM/access/complication"
-EMMREQUEST_API="https://utils.surgicalsafety.com/api/emm/v1/request"
-EMMREPORT_API="https://utils.surgicalsafety.com/api/emm/v1"
-EMMPUBLISH_API="https://utils.surgicalsafety.com/api/emm/v1/publish"
+EMMREQUEST_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/request"
+EMMREPORT_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1"
+EMMPUBLISH_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/publish"
 ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://utils.surgicalsafety.com/api/emm/v1/media"
-PRESENTER_API="https://utils.surgicalsafety.com/api/emm/v1/presenter"
+MEDIA_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/media"
+PRESENTER_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/presenter"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EMMPUBLISHACCESS_API="https://test-insightsapi.surgicalsafety.com/api/enhancedmm/access/emmpublish"
 EFFICIENCY_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/efficiency/access"
-EFFICIENCY_API="https://utils.surgicalsafety.com/api/efficiency/v1"
-EFFICIENCYTILE_API="https://utils.surgicalsafety.com/api/efficiency/v1/tile"
+EFFICIENCY_API="https://api.insights-staging.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://api.insights-staging.surgicalsafety.com/api/efficiency/v1/tile"
 SSC_ACCESS_API="https://test-insightsapi.surgicalsafety.com/api/ssc/access"
-SSC_API="https://utils.surgicalsafety.com/api/ssc/v1"
+SSC_API="https://api.insights-staging.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 SSCTILE_API="https://test-insightsapi.surgicalsafety.com/api/ssc/tile"
 SPECIALTY_API="https://test-lookup.surgicalsafety.com/api/list/specialty"
 COMPLICATION_API="https://test-lookup.surgicalsafety.com/api/list/complication"
-CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
+CASE_DISCOVERY_API="https://api.insights-staging.surgicalsafety.com/api/case_discovery/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
