--- a/.env.test-copy
+++ b/.env.test-copy
@@ -13,21 +13,21 @@ AUTH_CLIENT_ID=33a6a970-ddb0-48e5-a8fe-68c2212ddc94
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="https://api.insights.surgicalsafety.com/api/users/v1/"
+USER_API="https://api.insights-test.surgicalsafety.com/api/users/v1/"
 
-EMMREQUEST_API="https://api.insights.surgicalsafety.com/api/emm/v1/request"
-EMMREPORT_API="https://api.insights.surgicalsafety.com/api/emm/v1"
-EMMPUBLISH_API="https://api.insights.surgicalsafety.com/api/emm/v1/publish"
+EMMREQUEST_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/request"
+EMMREPORT_API="https://api.insights-test.surgicalsafety.com/api/emm/v1"
+EMMPUBLISH_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/publish"
 ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://api.insights.surgicalsafety.com/api/emm/v1/media"
-PRESENTER_API="https://api.insights.surgicalsafety.com/api/emm/v1/presenter"
+MEDIA_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/media"
+PRESENTER_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/presenter"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
-EFFICIENCY_API="https://api.insights.surgicalsafety.com/api/efficiency/v1"
-EFFICIENCYTILE_API="https://api.insights.surgicalsafety.com/api/efficiency/v1/tile"
-SSC_API="https://api.insights.surgicalsafety.com/api/ssc/v1"
+EFFICIENCY_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1/tile"
+SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
-CASE_DISCOVERY_API="https://api.insights.surgicalsafety.com/api/case_discovery/v1/"
+CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discovery/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
