Update prod call

--- a/.env.production
+++ b/.env.production
@@ -12,7 +12,7 @@ AUTH_LOGIN=https://accounts.surgicalsafety.com/
 AUTH_CLIENT_ID=f01a69d2-569b-4cba-aba7-832d033ae19f
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
-USER_API="https://api.insights.surgicalsafety.com/api/users/v1/profile"
+USER_API="https://api.insights.surgicalsafety.com/api/users/v1/"
 
 EMMREQUEST_API="https://api.insights.surgicalsafety.com/api/emm/v1/request"
 EMMREPORT_API="https://api.insights.surgicalsafety.com/api/emm/v1"
