Everything but uses staging but ssc for now

--- a/.env.test
+++ b/.env.test
@@ -15,19 +15,19 @@ AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 ALLOW_PLUS_EMAILS=true
 USER_API="https://api.insights-test.surgicalsafety.com/api/users/v1/"
 
-EMMREQUEST_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/request"
-EMMREPORT_API="https://api.insights-test.surgicalsafety.com/api/emm/v1"
-EMMPUBLISH_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/publish"
+EMMREQUEST_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/request"
+EMMREPORT_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1"
+EMMPUBLISH_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/publish"
 ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
 USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/media"
-PRESENTER_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/presenter"
+MEDIA_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/media"
+PRESENTER_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/presenter"
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
-EFFICIENCY_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1"
-EFFICIENCYTILE_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1/tile"
+EFFICIENCY_API="https://api.insights-staging.surgicalsafety.com/api/efficiency/v1"
+EFFICIENCYTILE_API="https://api.insights-staging.surgicalsafety.com/api/efficiency/v1/tile"
 SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
-CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discovery/v1/"
+CASE_DISCOVERY_API="https://api.insights-staging.surgicalsafety.com/api/case_discovery/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
