update profile url

--- a/.env.staging
+++ b/.env.staging
@@ -13,7 +13,7 @@ AUTH_CLIENT_ID=30c767a6-2dbc-439e-b068-e80ca206c740
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="https://api.insights-staging.surgicalsafety.com/api/users/v1/profile"
+USER_API="https://api.insights-staging.surgicalsafety.com/api/users/v1/"
 
 EMMREQUEST_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/request"
 EMMREPORT_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1"
