Only show logs in test environments

--- a/.env.test
+++ b/.env.test
@@ -31,3 +31,4 @@ DISPLAY_PENDING_REPORT=true
 CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discovery/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
+DISPLAY_LOGS=true
