Update prod and staging logs

--- a/.env.production
+++ b/.env.production
@@ -28,5 +28,5 @@ SSC_API="https://api.insights.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 CASE_DISCOVERY_API="https://api.insights.surgicalsafety.com/api/case_discovery/v1/"
-LOGGER_API="https://api.insights.surgicalsafety.com/api/logging"
+LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="81d1afd1-c073-4805-a6d8-97f8696a7586"
