Update to use EMR endpoint

--- a/.env.development
+++ b/.env.development
@@ -29,5 +29,6 @@ SSC_API="http://127.0.0.1:8003/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
+EMR_API="https://utils.surgicalsafety.com/api/emr/v1/"
 LOGGER_API="https://api.insights-staging.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="4a6743db-b6c4-4175-8405-a3490a5d3e1e"
