--- a/.env.test
+++ b/.env.test
@@ -29,6 +29,7 @@ SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
 CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discovery/v1/"
+EMR_API="https://api.insights-test.surgicalsafety.com/api/emr/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
 DISPLAY_LOGS=true
