--- a/.env.production
+++ b/.env.production
@@ -13,6 +13,7 @@ AUTH_CLIENT_ID=f01a69d2-569b-4cba-aba7-832d033ae19f
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 USER_API="https://api.insights.surgicalsafety.com/api/users/v1/"
+USER_V2_API="https://api.insights.surgicalsafety.com/api/users/v2/"
 
 EMMREQUEST_API="https://api.insights.surgicalsafety.com/api/emm/v1/request"
 EMMREPORT_API="https://api.insights.surgicalsafety.com/api/emm/v1"
