--- a/.env.staging
+++ b/.env.staging
@@ -14,6 +14,7 @@ AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
 USER_API="https://api.insights-staging.surgicalsafety.com/api/users/v1/"
+USER_V2_API="https://api.insights-staging.surgicalsafety.com/api/users/v2/"
 
 EMMREQUEST_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1/request"
 EMMREPORT_API="https://api.insights-staging.surgicalsafety.com/api/emm/v1"
