Revert development settings

--- a/.env.development
+++ b/.env.development
@@ -13,23 +13,23 @@ AUTH_CLIENT_ID=33a6a970-ddb0-48e5-a8fe-68c2212ddc94
 AUTH_API=https://api.accounts.surgicalsafety.com/oauth/v1/
 
 ALLOW_PLUS_EMAILS=true
-USER_API="https://api.insights-test.surgicalsafety.com/api/users/v1/"
-USER_V2_API="https://api.insights-test.surgicalsafety.com/api/users/v2/"
+USER_API="http://127.0.0.1:8006/api/users/v1/"
+USER_V2_API="http://127.0.0.1:8006/api/users/v2/"
 
-EMMREQUEST_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/request"
-EMMREPORT_API="https://api.insights-test.surgicalsafety.com/api/emm/v1"
-EMMPUBLISH_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/publish"
-ONBOARD_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/onBoardCompleted"
-USERDETAILSMODIFY_API="https://test-insightsapi.surgicalsafety.com/api/UserDetails/modify"
-MEDIA_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/media"
-PRESENTER_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/presenter"
-DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
-EFFICIENCY_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1"
-EFFICIENCYTILE_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1/tile"
-SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
+EMMREQUEST_API="http://127.0.0.1:8005/api/emm/v1/request"
+EMMREPORT_API="http://127.0.0.1:8005/api/emm/v1"
+EMMPUBLISH_API="http://127.0.0.1:8005/api/emm/v1/publish"
+ONBOARD_API="https://localhost:5003/api/UserDetails/onBoardCompleted"
+USERDETAILSMODIFY_API="https://localhost:5003/api/UserDetails/modify"
+MEDIA_API="http://127.0.0.1:8005/api/emm/v1/media"
+PRESENTER_API="http://127.0.0.1:8005/api/emm/v1/presenter"
+DASHBOARDTILE_API="https://localhost:5003/api/dashboard/tile"
+EFFICIENCY_API="http://127.0.0.1:8000/api/efficiency/v1"
+EFFICIENCYTILE_API="http://127.0.0.1:8000/api/efficiency/v1/tile"
+SSC_API="http://127.0.0.1:8003/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
-CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discovery/v1/"
-EMR_API="https://api.insights-test.surgicalsafety.com/api/emr/v1/"
-LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
+CASE_DISCOVERY_API="https://utils.surgicalsafety.com/api/case_discovery/v1/"
+EMR_API="https://utils.surgicalsafety.com/api/emr/v1/"
+LOGGER_API="https://api.insights-staging.surgicalsafety.com/api/logging"
 LOGGER_APP_ID="4a6743db-b6c4-4175-8405-a3490a5d3e1e"
