--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "build": "cross-env NODE_ENV=production webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:test": "npm run build:clean && cross-env NODE_ENV=test webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
     "build:staging": "npm run build:clean && cross-env NODE_ENV=staging webpack --config config/webpack.prod.babel.js --color -p --progress --hide-modules --display-optimization-bailout",
-    "build:clean": "rm -rf ./build",
+    "build:clean": "rimraf ./build",
     "start": "cross-env NODE_ENV=development node server",
     "start:production": "npm run test && npm run build && npm run start:prod",
     "start:prod": "cross-env NODE_ENV=production node server",
@@ -100,7 +100,7 @@
   },
   "devDependencies": {
     "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.15.5",
     "@babel/plugin-proposal-class-properties": "^7.0.0",
     "@babel/plugin-proposal-decorators": "^7.0.0",
     "@babel/plugin-proposal-do-expressions": "^7.0.0",
@@ -150,7 +150,7 @@
     "html-webpack-plugin": "3.2.0",
     "image-webpack-loader": "4.3.1",
     "imports-loader": "0.8.0",
-    "jest-cli": "23.1.0",
+    "jest": "^27.2.4",
     "lint-staged": "7.1.3",
     "node-plop": "0.15.0",
     "node-sass": "^4.7.2",
