--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.15",
     "@fortawesome/free-solid-svg-icons": "5.7.2",
     "@fortawesome/react-fontawesome": "0.1.4",
-    "@material-ui/core": "4.9.1",
+    "@material-ui/core": "^4.9.1",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.44",
     "@mdi/js": "5.0.45",
@@ -57,7 +57,7 @@
     "invariant": "2.2.4",
     "ip": "1.1.5",
     "lodash": "4.17.10",
-    "material-table": "1.57.1",
+    "material-table": "^1.69.3",
     "minimist": "1.2.0",
     "moment": "2.29.1",
     "moment-timezone": "0.5.32",
