--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
     "@fortawesome/fontawesome-svg-core": "1.2.15",
     "@fortawesome/free-solid-svg-icons": "5.7.2",
     "@fortawesome/react-fontawesome": "0.1.4",
-    "@material-ui/core": "^4.9.1",
+    "@material-ui/core": "4.9.1",
     "@material-ui/icons": "4.9.1",
     "@material-ui/lab": "4.0.0-alpha.44",
     "@mdi/js": "5.0.45",
