add page layouts for numerous pages and sub pages, block utilization page

--- a/.env.development
+++ b/.env.development
@@ -26,6 +26,10 @@ PRESENTER_API="https://api.insights-test.surgicalsafety.com/api/emm/v1/presenter
 DASHBOARDTILE_API="https://test-insightsapi.surgicalsafety.com/api/dashboard/tile"
 EFFICIENCY_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1"
 EFFICIENCYTILE_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v1/tile"
+BLOCKUTILIZATION_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/block_utilization"
+TURNOVER_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/turnover"
+CONFIGURATION_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/config"
+ONTIMESTART_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/on_time_start"
 SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
