--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@babel/polyfill": "^7.0.0",
     "@date-io/core": "1.3.13",
     "@date-io/date-fns": "1.3.13",
+    "@elastic/apm-rum": "^5.10.0",
     "@fortawesome/fontawesome-svg-core": "1.2.15",
     "@fortawesome/free-solid-svg-icons": "5.7.2",
     "@fortawesome/react-fontawesome": "0.1.4",
