--- a/.env.development
+++ b/.env.development
@@ -33,3 +33,4 @@ CASE_DISCOVERY_API="https://api.insights-test.surgicalsafety.com/api/case_discov
 EMR_API="https://api.insights-test.surgicalsafety.com/api/emr/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
+APM_URL=https://log-test.surgicalsafety.com:8200/
