wip with updates for test

--- a/.env.development
+++ b/.env.development
@@ -30,6 +30,7 @@ BLOCKUTILIZATION_API="https://api.insights-test.surgicalsafety.com/api/efficienc
 TURNOVER_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/turnover"
 CONFIGURATION_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/config"
 ONTIMESTART_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/on_time_start"
+SCHEDULING_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/scheduling"
 SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
