--- a/.env.development
+++ b/.env.development
@@ -34,3 +34,4 @@ EMR_API="https://api.insights-test.surgicalsafety.com/api/emr/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
 APM_URL=https://log.surgicalsafety.com:8200/
+APM_ENV=development
