--- a/.env.production
+++ b/.env.production
@@ -33,3 +33,4 @@ EMR_API="https://api.insights.surgicalsafety.com/api/emr/v1/"
 LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="81d1afd1-c073-4805-a6d8-97f8696a7586"
 APM_URL=https://log.surgicalsafety.com:8200/
+APM_ENV=production
