--- a/.env.staging
+++ b/.env.staging
@@ -35,3 +35,4 @@ LOGGER_API="https://api.insights.surgicalsafety.com/api/log"
 LOGGER_APP_ID="ca0daf29-c692-4c09-a630-cebd2f9160b9"
 DISPLAY_LOGS=true
 APM_URL=https://log.surgicalsafety.com:8200/
+APM_ENV=staging
