--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "dotenv": "7.0.0",
     "express": "4.16.3",
     "fontfaceobserver": "2.0.13",
+    "framer-motion": "^4.1.17",
     "history": "4.7.2",
     "hoist-non-react-statics": "2.5.0",
     "immutable": "3.8.2",
