Updates for different pages, wip scheduling and case on time

--- a/.env.development
+++ b/.env.development
@@ -31,6 +31,7 @@ TURNOVER_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/tur
 CONFIGURATION_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/config"
 ONTIMESTART_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/on_time_start"
 SCHEDULING_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/scheduling"
+EFFICIENCYV2_API="https://api.insights-test.surgicalsafety.com/api/efficiency/v2/landing"
 SSC_API="https://api.insights-test.surgicalsafety.com/api/ssc/v1"
 SSC_REPORT_READY_DAY=15
 DISPLAY_PENDING_REPORT=true
