--- a/package.json
+++ b/package.json
@@ -39,9 +39,9 @@
     "@fortawesome/fontawesome-svg-core": "1.2.15",
     "@fortawesome/free-solid-svg-icons": "5.7.2",
     "@fortawesome/react-fontawesome": "0.1.4",
-    "@material-ui/core": "4.9.1",
-    "@material-ui/icons": "4.9.1",
-    "@material-ui/lab": "4.0.0-alpha.44",
+    "@material-ui/core": "4.12.3",
+    "@material-ui/icons": "4.11.2",
+    "@material-ui/lab": "4.0.0-alpha.57",
     "@material-ui/pickers": "^3.3.10",
     "@mdi/js": "6.4.95",
     "@mdi/react": "1.3.0",
@@ -96,6 +96,7 @@
     "redux-watch": "1.1.1",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
+    "uuid": "^8.3.2",
     "video.js": "^7.11.8",
     "videojs-contrib-eme": "^3.8.0",
     "warning": "4.0.1",
