--- a/package.json
+++ b/package.json
@@ -96,6 +96,7 @@
     "redux-watch": "1.1.1",
     "reselect": "4.0.0",
     "sanitize.css": "4.1.0",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "video.js": "^7.11.8",
     "videojs-contrib-eme": "^3.8.0",
