--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,6 @@
 {
   "parser": "babel-eslint",
-  "extends": [
-    "airbnb",
-    "plugin:react/recommended"
-  ],
+  "extends": ["airbnb", "plugin:react/recommended"],
   "env": {
     "browser": true,
     "node": true,
